fixed the bug that made the el invisible

--- a/mineCraft/index.css
+++ b/mineCraft/index.css
@@ -74,10 +74,12 @@ img {
     background-color: skyblue;
 }
 
-#inventory {
-    height: 100px;
-    width: 100%;
-}
+ #inventory {
+    display: inline-block;
+    width: 8%;
+    height: 50px;
+    
+} 
 .parent-div {
     height: 80vh;
     margin: 0;
